Bug 36726 - [4.4 Regression] ICE in move_stmt_r, at tree-cfg.c:5699 with -fopenmp
Summary: [4.4 Regression] ICE in move_stmt_r, at tree-cfg.c:5699 with -fopenmp
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: 4.4.0
Assignee: Jakub Jelinek
URL:
Keywords: ice-on-valid-code, openmp
Depends on:
Blocks:
 
Reported: 2008-07-04 09:18 UTC by Tobias Burnus
Modified: 2008-07-07 15:33 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2008-07-07 13:34:02


Attachments
Test file (792 bytes, text/plain)
2008-07-04 09:18 UTC, Tobias Burnus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Burnus 2008-07-04 09:18:04 UTC
Fails with:
  4.4.0 20080704 (experimental) [trunk revision 137451]
  4.4.0 20080628 (experimental) [trunk revision 137216]
Works with:
  4.4.0 20080627 (experimental) [trunk revision 137189]

$ gfortran -c -fopenmp test.f90
test.f90: In function 'double_grid_apply_non_local':
test.f90:113: internal compiler error: in move_stmt_r, at tree-cfg.c:5699
Comment 1 Tobias Burnus 2008-07-04 09:18:57 UTC
Created attachment 15851 [details]
Test file
Comment 2 Jakub Jelinek 2008-07-07 15:27:19 UTC
Subject: Bug 36726

Author: jakub
Date: Mon Jul  7 15:26:35 2008
New Revision: 137572

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=137572
Log:
	PR middle-end/36726
	* f95-lang.c (poplevel): Don't ever add subblocks to
	global_binding_level.

	* gfortran.dg/gomp/pr36726.f90: New test.

Added:
    trunk/gcc/testsuite/gfortran.dg/gomp/pr36726.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/f95-lang.c
    trunk/gcc/testsuite/ChangeLog

Comment 3 Jakub Jelinek 2008-07-07 15:33:08 UTC
Fixed.