re PR middle-end/36726 (ICE in move_stmt_r, at tree-cfg.c:5699 with -fopenmp)

PR middle-end/36726
	* f95-lang.c (poplevel): Don't ever add subblocks to
	global_binding_level.

	* gfortran.dg/gomp/pr36726.f90: New test.

From-SVN: r137572